[package]
name = "bookedblocks"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.29.0"
itertools = "0.14.0"
kraken-async-rs = "0.14.0"
ndarray = "0.17.1"
num-traits = "0.2.19"
ratatui = "0.29.0"
rbtree = "0.2.0"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"

[dev-dependencies]
rust_decimal = "1.39.0"
